added changes in enroll ment policies